change all design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,7 +89,7 @@
     <string name="Workouts">Workouts</string>
     <string name="Default_workout">Default workout</string>
 
-    <!--account-->\
+    <!--account-->
     <string name="Account">Account</string>
     <string name="My_Bookings">My Bookings </string>
     <string name="My_membership">My membership</string>
