--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,7 +81,7 @@
     <string name="Current">Current</string>
     <string name="Heaviest">Heaviest</string>
     <string name="Lightest">Lightest</string>
-    <string name="BMI_Body">BMI (Body mass index)</string>
+    <string name="BMI_Body">BMI</string>
     <string name="BMI">BMI</string>
     <string name="Height">Height</string>
 
@@ -183,4 +183,6 @@
     <string name="Privacy_Policy">Privacy Policy</string>
     <string name="Reports">Reports</string>
     <string name="home">Home</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
