--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,6 @@
 
     <string name="Title">FIT ZONE</string>
 
-    <!-- Onboarding Screen-->
-    <string name="screen1desc">Meet your coach,\nstart your journey</string>
-    <string name="screen2desc">Create a workout plan \n to stay fit </string>
 
     <!--Packages-->
     <string name="packages_list">Packages List</string>
@@ -183,6 +180,15 @@
     <string name="Privacy_Policy">Privacy Policy</string>
     <string name="Reports">Reports</string>
     <string name="home">Home</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+   <!-- OnbondingScreen-->
+    <string name="screen1">Upload a Video</string>
+    <string name="screen2">Create a Short</string>
+    <string name="screen3">Go Live</string>
+    <string name="screen1desc">Meet your coach,\n
+start your journey</string>
+    <string name="screen2desc">Create a workout plan \n
+to stay fit </string>
+    <string name="screen3desc">Action is the \n
+key to all success</string>
+    <string name="startDesc">Create a long video or shorts and upload on youtube. Interact with your subscribers on youtube live.</string>
 </resources>
